# CapScreen

./: .gitignore  CHANGELOG.md  README.md  TESTING_STAT.md  pyproject.toml  requirements.txt  setup.py  test_stat_simple.sh
.github/workflows/: release.yml
capscreen/: CapScreen.py  __init__.py  cli.py  config.json  count.py  version.py
capscreen/scripts/: alignment.py  count.py  generate_report.py  qc.py  stat.py
capscreen/templates/: template_report.html
conda/: capscreen-stat.yml  capscreen.yml
docker/: DockerFile  README.md
reference/: reference_aav2.2.bt2  reference_aav2.3.bt2  reference_aav2.4.bt2  reference_aav2.fasta  reference_aav2.rev.2.bt2
