[tool.semantic_release]
version_variable = [
    "capscreen/version.py:__version__",
    "setup.py:version",
]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "master"
upload_to_pypi = true
build_command = "python setup.py sdist bdist_wheel"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.master]
match = "(master|main)"
prerelease = false

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 